welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: reassignment to val
    cpt=cpt+1
       ^